# uvakrr_notebooks_2022

./: README.md  pyproject.toml
week2/: ex2.ipynb
week3/: ex3-with-solutions.ipynb
week5/: unique-solution.ipynb
